--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -1,161 +1,1 @@
-<!doctype html>
-<html>
-
-<head>
-    <title>Vakyansh: A crowdsourcing initiative for Indic languages</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet"
-        type="text/css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/home.css">
-</head>
-
-<body>
-
-    <%- include common/header.ejs %>
-    <div class="container-fluid">
-        <div class="row pt-lg-5">
-            <div class="col-12 col-md-7 col-lg-6 ml-lg-auto p-5 text-dark mt-4">
-                <h1 class="display-5 font-wt-900 site-blue lh-5">Vakyansh: A crowdsourcing initiative for Indic
-                    languages
-                </h1>
-                <p class="h5 font-weight-light-lg font-weight-normal-sm lh-7 site-blue text-justify mt-5">
-                    For the development of a speech recognition product that focuses solely on Indian languages,
-                    there is a need for an enormous repository of diversified Indian voices. Through
-                    Vakyansh, we are reaching out to you to contribute your voices to create a diverse open source
-                    repository of Indian voices to this end.
-                </p>
-                </br>
-                </br>
-            </div>
-            <div class="col-12 col-md-5 col-lg-5 text-right px-0 align-self-center">
-                <img src="/img/home.svg" class="img img-fluid">
-            </div>
-        </div>
-    </div>
-
-    <div class="container-fluid bg-blue mt-n6 pb-6 pt-6">
-        <div class="row justify-content-center text-white pt-5 pb-5">
-            <div class="col-10 col-lg-4 text-left pr-4 pl-0 mb-2">
-                <p class="h1 font-wt-900 lh-5">
-                    Our multilingual DNA is still a missing piece in digital first strategy
-                </p>
-            </div>
-            <div class="col-10 col-lg-3 text-left lh-7 pl-lg-3 pl-0 mb-2">
-                <section class="lead font-weight-normal-sm">India being a vast multilingual country, 90% of India’s population relies on
-                    regional languages to
-                    conduct their educational, social & digital activities.</section>
-
-
-            </div>
-            <div class="col-10 col-lg-3 text-left lh-7 pl-lg-3 pl-0 mb-2">
-                <section class="lead font-weight-normal-sm">As the volume of internet users multiplies and there is a demand to access digital
-                    platforms for financial, educational and economic activities, there is a need to
-                    start thinking Indic languages
-                    first and move towards language localization.</section>
-            </div>
-        </div>
-    </div>
-
-    <div class="container-fluid bg-light-blue mt-n5">
-        <div class="row pb-6 pt-6 justify-content-center mt-5">
-            <div class="col-10 col-lg-4 text-center p-5 align-self-center">
-                <img src="img/about-us-1.svg" alt="Speaker Diversity" class="img img-fluid">
-            </div>
-            <div class="col-10 col-lg-6 text-left pb-5">
-                <p class="h1 font-wt-900 lh-5">
-                    Winning back our languages by introducing localisation
-                </p>
-                <p class="lead lh-7 mt-5 font-weight-normal-sm">There is a felt need for a speech recognition product that specializes in
-                    Indic languages, that
-                    meets a high accuracy bar and is closer to the daily language and
-                    communication functions of users of diverse Indian languages.
-
-                    </br>
-                    </br>
-                    Speech recognition is a technology that converts speech to real-time text. Such a product for
-                    Indian languages has the potential to become a building block to a digital first model, in
-                    various sectors, such as, education, healthcare and media.
-
-                    </br>
-                    </br>
-                    The product proposed to be developed by EkStep will rely on open source contributions through
-                    Vakyansh.</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="container-fluid bg-blue mt-n5">
-        <div class="row pb-5 pt-6 justify-content-center  text-white mt-5">
-            <div class="col-10 col-lg-6 mb-3 text-left pb-5">
-                <p class="h1 font-wt-900 lh-5">
-                    Crowd Sourcing & your contribution
-                </p>
-                <p class="lead lh-7 mt-5 font-weight-normal-sm">Speech recognition relies on "machine-learning" technology that requires huge
-                    collections of datasets that includes diversified Indian voices and the corresponding text. Through
-                    Vakyansh, EkStep wants to create a diverse open source repository of Indian voices speaking Indian
-                    language which can be used for this initiative and others. The initial plan is to begin
-                    with Hindi and then gradually grow the product to other Indic languages. Our goal is to reach
-                    approximately 10,000 hrs of dataset for Hindi language at the earliest.
-                    </br>
-                    </br>
-                    This is where you come in.
-                    </br>
-                    </br>
-                    As a team, we are inviting you to join us and contribute 30-45 minutes of your voice to this
-                    initiative. Recording your voice at one stretch might be overwhelming and hence, we have created
-                    leaner measures on our website, for you to visit us multiple times and commence from where you left
-                    us off.
-                    </br>
-                    </br>
-                    Every minute of your contribution will make a huge difference and bring us closer to our objective.
-                </p>
-                <div class="row">
-                    <div class="col-10 col-sm-8 col-lg-5">
-                        <a role="button" href="/#speaker-details"
-                            class="btn bg-white shadow text-primary h6 w-100 rounded mt-3 p-3">
-                            START RECORDING
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-8 col-lg-4 mb-3 text-center p-5 align-self-center">
-                <img src="img/about-us-2.svg" alt="Speaker Diversity" class="img img-fluid">
-            </div>
-        </div>
-    </div>
-
-    <div class="container-fluid bg-light-blue mt-5">
-        <div class="text-center mt-5 pt-5">
-            ABOUT THE ORGANISATION
-        </div>
-        <p class="h1 font-wt-900 text-center mt-3">
-            EkStep
-        </p>
-
-        <div class="row pb-6 justify-content-center text-muted">
-            <div class="col-10 col-lg-6 mb-3 text-left lh-7 py-5 lead font-weight-normal-sm">
-                EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve
-                complex societal problems at scale. We do this by leveraging the open source digital infrastructure we
-                have created called Sunbird and by following a way of thinking and doing called the Societal Platform
-                Approach.
-                </br>
-                </br>
-                EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.
-
-            </div>
-        </div>
-    </div>
-
-    <%- include common/footer.ejs %>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+<!doctype html><html><head><title>Vakyansh: A crowdsourcing initiative for Indic languages</title><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet" type="text/css"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"><link rel="stylesheet" type="text/css" href="css/home.css"></head><body> <%- include common/header.ejs %> <div class="container-fluid"><div class="row pt-lg-5"><div class="col-12 col-md-7 col-lg-6 ml-lg-auto p-5 text-dark mt-4"><h1 class="display-5 font-wt-900 site-blue lh-5">Vakyansh: A crowdsourcing initiative for Indic languages</h1><p class="h5 font-weight-light-lg font-weight-normal-sm lh-7 site-blue text-justify mt-5">For the development of a speech recognition product that focuses solely on Indian languages, there is a need for an enormous repository of diversified Indian voices. Through Vakyansh, we are reaching out to you to contribute your voices to create a diverse open source repository of Indian voices to this end.</p><br><br></div><div class="col-12 col-md-5 col-lg-5 text-right px-0 align-self-center"><img src="/img/home.svg" class="img img-fluid"></div></div></div><div class="container-fluid bg-blue mt-n6 pb-6 pt-6"><div class="row justify-content-center text-white pt-5 pb-5"><div class="col-10 col-lg-4 text-left pr-4 pl-0 mb-2"><p class="h1 font-wt-900 lh-5">Our multilingual DNA is still a missing piece in digital first strategy</p></div><div class="col-10 col-lg-3 text-left lh-7 pl-lg-3 pl-0 mb-2"><section class="lead font-weight-normal-sm">India being a vast multilingual country, 90% of India’s population relies on regional languages to conduct their educational, social & digital activities.</section></div><div class="col-10 col-lg-3 text-left lh-7 pl-lg-3 pl-0 mb-2"><section class="lead font-weight-normal-sm">As the volume of internet users multiplies and there is a demand to access digital platforms for financial, educational and economic activities, there is a need to start thinking Indic languages first and move towards language localization.</section></div></div></div><div class="container-fluid bg-light-blue mt-n5"><div class="row pb-6 pt-6 justify-content-center mt-5"><div class="col-10 col-lg-4 text-center p-5 align-self-center"><img src="img/about-us-1.svg" alt="Speaker Diversity" class="img img-fluid"></div><div class="col-10 col-lg-6 text-left pb-5"><p class="h1 font-wt-900 lh-5">Winning back our languages by introducing localisation</p><p class="lead lh-7 mt-5 font-weight-normal-sm">There is a felt need for a speech recognition product that specializes in Indic languages, that meets a high accuracy bar and is closer to the daily language and communication functions of users of diverse Indian languages.<br><br>Speech recognition is a technology that converts speech to real-time text. Such a product for Indian languages has the potential to become a building block to a digital first model, in various sectors, such as, education, healthcare and media.<br><br>The product proposed to be developed by EkStep will rely on open source contributions through Vakyansh.</p></div></div></div><div class="container-fluid bg-blue mt-n5"><div class="row pb-5 pt-6 justify-content-center text-white mt-5"><div class="col-10 col-lg-6 mb-3 text-left pb-5"><p class="h1 font-wt-900 lh-5">Crowd Sourcing & your contribution</p><p class="lead lh-7 mt-5 font-weight-normal-sm">Speech recognition relies on "machine-learning" technology that requires huge collections of datasets that includes diversified Indian voices and the corresponding text. Through Vakyansh, EkStep wants to create a diverse open source repository of Indian voices speaking Indian language which can be used for this initiative and others. The initial plan is to begin with Hindi and then gradually grow the product to other Indic languages. Our goal is to reach approximately 10,000 hrs of dataset for Hindi language at the earliest.<br><br>This is where you come in.<br><br>As a team, we are inviting you to join us and contribute 30-45 minutes of your voice to this initiative. Recording your voice at one stretch might be overwhelming and hence, we have created leaner measures on our website, for you to visit us multiple times and commence from where you left us off.<br><br>Every minute of your contribution will make a huge difference and bring us closer to our objective.</p><div class="row"><div class="col-10 col-sm-8 col-lg-5"><a role="button" href="/#speaker-details" class="btn bg-white shadow text-primary h6 w-100 rounded mt-3 p-3">START RECORDING</a></div></div></div><div class="col-8 col-lg-4 mb-3 text-center p-5 align-self-center"><img src="img/about-us-2.svg" alt="Speaker Diversity" class="img img-fluid"></div></div></div><div class="container-fluid bg-light-blue mt-5"><div class="text-center mt-5 pt-5">ABOUT THE ORGANISATION</div><p class="h1 font-wt-900 text-center mt-3">EkStep</p><div class="row pb-6 justify-content-center text-muted"><div class="col-10 col-lg-6 mb-3 text-left lh-7 py-5 lead font-weight-normal-sm">EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.<br><br>EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.</div></div></div> <%- include common/footer.ejs %> <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script></body></html>
