--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -1,24 +1,1 @@
-<footer class="fixed-bottom bg-light pt-3 border-top">
-    <div class="container-fluid">
-      <div class="row text-center">
-        <div class="col-4 col-md-6">
-          <p class="text-muted">&copy; EkStep Foundation, 2020 .</p>
-        </div>
-        <div class="col-8 col-md-6">
-            <ul class="list-inline mb-2">
-              <li class="list-inline-item">
-                <a href="/about-us">About Us</a>
-              </li>
-              <li class="list-inline-item">&sdot;</li>
-              <li class="list-inline-item">
-                  <a href="/terms-and-conditions">Terms & Conditions</a>
-              </li>
-              <li class="list-inline-item">&sdot;</li>
-              <li class="list-inline-item">
-                  <a href="/terms-and-conditions#privacy-policy">Privacy Policy</a>
-              </li>
-            </ul>
-          </div>
-      </div>
-    </div>
-  </footer>
+<footer class="fixed-bottom bg-light pt-3 border-top"><div class="container-fluid"><div class="row text-center"><div class="col-4 col-md-6"><p class="text-muted">&copy; EkStep Foundation, 2020 .</p></div><div class="col-8 col-md-6"><ul class="list-inline mb-2"><li class="list-inline-item"><a href="/about-us">About Us</a></li><li class="list-inline-item">&sdot;</li><li class="list-inline-item"><a href="/terms-and-conditions">Terms & Conditions</a></li><li class="list-inline-item">&sdot;</li><li class="list-inline-item"><a href="/terms-and-conditions#privacy-policy">Privacy Policy</a></li></ul></div></div></div></footer>
