--- a/views/record.ejs
+++ b/views/record.ejs
@@ -1,207 +1,1 @@
-<!doctype html>
-<html>
-
-<head>
-    <title>Vakyansh: A crowdsourcing initiative for Indic languages</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- google APIs -->
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- 3rd party libs -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3.7.0/notyf.min.css"
-        integrity="sha256-1T9PQaTbbUusCVH72ahoGVZ1axGmU5uAOgSb4/GNXj8=" crossorigin="anonymous">
-    <!-- My custom css -->
-    <link rel="stylesheet" type="text/css" href="css/record.css">
-</head>
-
-<body>
-    <%- include common/header.ejs %>
-    <div id="loader" class="overlay__content"><span class="spinner"></span></div>
-    <div id="page-content" class="d-none">
-        <div class="container-fluid pt-5 pb-6 mb-5">
-            <div class="row justify-content-center my-5">
-                <div class="col-md-8 col-sm-10 text-center">
-                    <label class="h1 font-weight-normal" id="sentenceLbl"></label>
-                </div>
-            </div>
-            <div class="row mt-5">
-                <div class="col-7 col-sm-8 offset-2">
-                    <div class="progress mt-1">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                            aria-valuenow="0" aria-valuemin="0" aria-valuemax="10" style="width: 0.5%"></div>
-                    </div>
-                </div>
-                <div class="col-3 col-sm-2">
-                    <span class="" id="currentSentenceLbl"></span>
-                    <span class="">/</span>
-                    <span class="" id="totalSentencesLbl"></span>
-                </div>
-            </div>
-            <div class="row justify-content-center ">
-                <div class="col-8 text-muted h-1r" id="get-started">
-                    Let's get started!
-                </div>
-            </div>
-            <div class="row justify-content-center align-items-center mt-5" id="startRecordRow">
-                <div class="col-xl-2 col-md-3 col-sm-4 col-6">
-                    <button type="button" class="btn btn-primary shadow h6 w-100 rounded mt-4 p-3" id="startRecord">
-                        START RECORDING
-                    </button>
-                </div>
-                <div class="col-xl-2 col-md-3 col-sm-4 col-6">
-                    <button type="button" tabindex="-1" id="skipBtn"
-                        class="btn btn-outline-primary h6 w-100 rounded mt-4 p-3">
-                        SKIP
-                    </button>
-                </div>
-            </div>
-            <div class="row justify-content-center my-5">
-                <div class="col-md-1 col-2 my-auto">
-                    <div id="recording-sign" class="recorder-container ml-auto align-middle d-none">
-                        <div class="outer"></div>
-                        <div class="outer-2"></div>
-                        <div class="icon-microphone"> <i class="material-icons md-48">mic</i></div>
-                    </div>
-                </div>
-                <div class="col-lg-5 col-8 text-center">
-                    <canvas id="visualizer"></canvas>
-                </div>
-            </div>
-            <div class="row justify-content-center mt-5">
-                <div class="col-lg-2 col-md-4 col-6">
-                    <button type="button" id="stopRecord"
-                        class="d-none btn btn-primary shadow h6 w-100 rounded mt-4 p-3">
-                        STOP RECORDING
-                    </button>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-4 col-md-6 col-sm-8 col-12 text-center">
-                    <audio class="d-none" id="player" controls tabindex="-1"></audio>
-                    <div class="text-danger mt-2 d-none" id="audio-small-error">
-                        <i class="material-icons align-middle">error</i>
-                        <span class="align-middle">
-                            Audio recording is too small. Please Re-record
-                        </span>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-center mt-5 mb-2">
-                <div class="col-lg-2 col-md-3 col-sm-4 col-6">
-                    <button type="button" id="reRecord"
-                        class="d-none btn btn-outline-primary h6 w-100 rounded mt-4 p-3">
-                        RE-RECORD
-                    </button>
-                </div>
-                <div class="col-lg-2 col-md-3 col-sm-4 col-6">
-                    <div class="outline-0" tabindex="0" data-toggle="tooltip"
-                        title="Please validate any error message before proceeding">
-                        <button id="nextBtn" class="d-none btn btn-primary shadow h6 w-100 rounded mt-4 p-3 point-none">
-                            NEXT
-                        </button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div id="time-progress" class="position-fixed text-center bg-transparent rounded-lg">
-            <div id="graphcontainer" class="mx-auto">
-                <div id="graphbackground"></div>
-                <div id="graphbar"></div>
-                <div id="graphforeground">
-                </div>
-            </div>
-            <div>
-                <span class="h6" id="time-value">0s</span><span class="text-muted">/30 mins</span>
-                <p>away from reaching your goal!</p>
-            </div>
-        </div>
-    </div>
-
-    <%- include common/footer.ejs %>
-
-    <div class="modal fade" id="instructionsModal" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog mw-100 mt-0" role="document">
-            <div class="modal-content">
-                <div class="container-fluid bg-light" id="recording-instructions">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span class="h2" aria-hidden="true">&times;</span>
-                    </button>
-                    <div class="text-center pb-5 pt-5">
-                        <p class="display-5 font-wt-900 site-blue">Recording Instructions</h1>
-                    </div>
-                    <div class="row pb-5 justify-content-center">
-                        <div class="col-lg-2 col-sm-4 col-6 mb-3 text-center">
-                            <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">settings_voice</i>
-                            <p class="mt-3 site-blue">Please test your <b>microphone</b></p>
-                        </div>
-                        <div class="col-lg-2 col-sm-4 col-6 mb-3 text-center">
-                            <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">speaker</i>
-                            <p class="mt-3 site-blue">Please test your <b>speakers</b></p>
-                        </div>
-                        <div class="col-lg-2 col-sm-4 col-6 mb-3 text-center">
-                            <i class="material-icons p-4  rounded-circle md-48 text-primary border-3">equalizer</i>
-                            <p class="mt-3 site-blue">Ensure there is <b>no background noise</b></p>
-                        </div>
-                        <div class="col-lg-2 col-sm-4 col-6 mb-3 text-center">
-                            <i
-                                class="material-icons p-4  rounded-circle md-48 text-primary border-3">record_voice_over</i>
-                            <p class="mt-3 site-blue">Get comfortable with the prompted text, before recording, by
-                                <b>reading it aloud</b></p>
-                        </div>
-                        <div class="col-lg-2 col-sm-4 col-6 mb-3 text-center">
-                            <i
-                                class="material-icons p-4  rounded-circle md-48 text-primary border-3">play_circle_filled</i>
-                            <p class="mt-3 site-blue">Get started by clicking on <b>Record</b> button</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header text-danger">
-                    <h5 class="modal-title h2" id="errorModalLabel">
-                        <span class="material-icons md-48 align-middle">
-                            error
-                        </span>
-                        Error !!!</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    An unexpected error occured while processing your request. Please try after some time.
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <script
-        src="https://cdn.jsdelivr.net/gh/mattdiamond/Recorderjs@08e7abd99739be6946f19f6806ccb368138f2dd3/dist/recorder.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/notyf@3.7.0/notyf.min.js"
-        integrity="sha256-22tRfnWCd6VIZ8O39ATlPY3pctqfFp9tFsyl4swl+VQ=" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-    <script src="js/record.js"></script>
-</body>
-
-</html>
+<!doctype html><html><head><title>Vakyansh: A crowdsourcing initiative for Indic languages</title><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet"><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3.7.0/notyf.min.css" integrity="sha256-1T9PQaTbbUusCVH72ahoGVZ1axGmU5uAOgSb4/GNXj8=" crossorigin="anonymous"><link rel="stylesheet" type="text/css" href="css/record.css"></head><body> <%- include common/header.ejs %> <div id="loader" class="overlay__content"><span class="spinner"></span></div><div id="page-content" class="d-none"><div class="container-fluid pt-5 pb-6 mb-5"><div class="row justify-content-center my-5"><div class="col-md-8 col-sm-10 text-center"><label class="h1 font-weight-normal" id="sentenceLbl"></label></div></div><div class="row mt-5"><div class="col-7 col-sm-8 offset-2"><div class="progress mt-1"><div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="10" style="width: 0.5%"></div></div></div><div class="col-3 col-sm-2"><span class="" id="currentSentenceLbl"></span> <span class="">/</span> <span class="" id="totalSentencesLbl"></span></div></div><div class="row justify-content-center"><div class="col-8 text-muted h-1r" id="get-started">Let's get started!</div></div><div class="row justify-content-center align-items-center mt-5" id="startRecordRow"><div class="col-xl-2 col-md-3 col-sm-4 col-6"><button type="button" class="btn btn-primary shadow h6 w-100 rounded mt-4 p-3" id="startRecord">START RECORDING</button></div><div class="col-xl-2 col-md-3 col-sm-4 col-6"><button type="button" tabindex="-1" id="skipBtn" class="btn btn-outline-primary h6 w-100 rounded mt-4 p-3">SKIP</button></div></div><div class="row justify-content-center my-5"><div class="col-md-1 col-2 my-auto"><div id="recording-sign" class="recorder-container ml-auto align-middle d-none"><div class="outer"></div><div class="outer-2"></div><div class="icon-microphone"><i class="material-icons md-48">mic</i></div></div></div><div class="col-lg-5 col-8 text-center"><canvas id="visualizer"></canvas></div></div><div class="row justify-content-center mt-5"><div class="col-lg-2 col-md-4 col-6"><button type="button" id="stopRecord" class="d-none btn btn-primary shadow h6 w-100 rounded mt-4 p-3">STOP RECORDING</button></div></div><div class="row justify-content-center"><div class="col-lg-4 col-md-6 col-sm-8 col-12 text-center"><audio class="d-none" id="player" controls tabindex="-1"></audio><div class="text-danger mt-2 d-none" id="audio-small-error"><i class="material-icons align-middle">error</i> <span class="align-middle">Audio recording is too small. Please Re-record</span></div></div></div><div class="row justify-content-center mt-5 mb-2"><div class="col-lg-2 col-md-3 col-sm-4 col-6"><button type="button" id="reRecord" class="d-none btn btn-outline-primary h6 w-100 rounded mt-4 p-3">RE-RECORD</button></div><div class="col-lg-2 col-md-3 col-sm-4 col-6"><div class="outline-0" tabindex="0" data-toggle="tooltip" title="Please validate any error message before proceeding"><button id="nextBtn" class="d-none btn btn-primary shadow h6 w-100 rounded mt-4 p-3 point-none">NEXT</button></div></div></div></div><div id="time-progress" class="position-fixed text-center bg-transparent rounded-lg"><div id="graphcontainer" class="mx-auto"><div id="graphbackground"></div><div id="graphbar"></div><div id="graphforeground"></div></div><div><span class="h6" id="time-value">0s</span><span class="text-muted">/30 mins</span><p>away from reaching your goal!</p></div></div></div> <%- include common/footer.ejs %> <div class="modal fade" id="instructionsModal" tabindex="-1" role="dialog" aria-hidden="true"><div class="modal-dialog mw-100 mt-0" role="document"><div class="modal-content"><div class="container-fluid bg-light" id="recording-instructions"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span class="h2" aria-hidden="true">&times;</span></button><div class="text-center pb-5 pt-5"><p class="display-5 font-wt-900 site-blue">Recording Instructions</p></div><div class="row pb-5 justify-content-center"><div class="col-lg-2 col-sm-4 col-6 mb-3 text-center"><i class="material-icons p-4 rounded-circle md-48 text-primary border-3">settings_voice</i><p class="mt-3 site-blue">Please test your <b>microphone</b></p></div><div class="col-lg-2 col-sm-4 col-6 mb-3 text-center"><i class="material-icons p-4 rounded-circle md-48 text-primary border-3">speaker</i><p class="mt-3 site-blue">Please test your <b>speakers</b></p></div><div class="col-lg-2 col-sm-4 col-6 mb-3 text-center"><i class="material-icons p-4 rounded-circle md-48 text-primary border-3">equalizer</i><p class="mt-3 site-blue">Ensure there is <b>no background noise</b></p></div><div class="col-lg-2 col-sm-4 col-6 mb-3 text-center"><i class="material-icons p-4 rounded-circle md-48 text-primary border-3">record_voice_over</i><p class="mt-3 site-blue">Get comfortable with the prompted text, before recording, by <b>reading it aloud</b></p></div><div class="col-lg-2 col-sm-4 col-6 mb-3 text-center"><i class="material-icons p-4 rounded-circle md-48 text-primary border-3">play_circle_filled</i><p class="mt-3 site-blue">Get started by clicking on <b>Record</b> button</p></div></div></div></div></div></div><div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel" aria-hidden="true"><div class="modal-dialog" role="document"><div class="modal-content"><div class="modal-header text-danger"><h5 class="modal-title h2" id="errorModalLabel"><span class="material-icons md-48 align-middle">error </span>Error !!!</h5><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button></div><div class="modal-body">An unexpected error occured while processing your request. Please try after some time.</div><div class="modal-footer"><button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button></div></div></div></div><script src="https://cdn.jsdelivr.net/gh/mattdiamond/Recorderjs@08e7abd99739be6946f19f6806ccb368138f2dd3/dist/recorder.js"></script><script src="https://cdn.jsdelivr.net/npm/notyf@3.7.0/notyf.min.js" integrity="sha256-22tRfnWCd6VIZ8O39ATlPY3pctqfFp9tFsyl4swl+VQ=" crossorigin="anonymous"></script><script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script><script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script><script src="js/record.js"></script></body></html>
