--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -142,6 +142,9 @@ outline: 0;
 .cursor-pointer{
   cursor: pointer;
 }
+.oflow-x-hid{
+  overflow-x: hidden;
+}
 [data-toggle="popover"]::after {
   display: inline-block;
   margin-left: .255em;
