Last sentence upload issue fix, Data update on thank you page

--- a/assets/css/thank-you.css
+++ b/assets/css/thank-you.css
@@ -206,3 +206,19 @@
   border-left: 0 solid transparent;
   border-right: 1.275em solid transparent;
 }
+.spinner {
+  width: 3rem;
+  height: 3rem;
+  display: inline-block;
+  border-width: .5rem;
+  border-color: #007bff;
+  border-top-color: #fff;
+  animation: spin 1s infinite linear;
+  border-radius: 100%;
+  border-style: solid;
+}
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
