Add circle-ci for vakyansh

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -118,7 +118,7 @@
                 </div>
                 <div class="form-group pt-3"><label for="gender" class="form-label">Language To Record</label> <select
                         class="form-control" id="language">
-                        <option selected="selected" value="hindi">Hindi</option>
+                        <option selected="selected" value="Hindi">Hindi</option>
                         <option value="Gujarati">Gujarati</option>
                         <option value="Odia">Odia</option>
                     </select></div>
