|Priyanshu + Sreejith| Added home page paragraph

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,11 +21,16 @@
             <div class="col-12 col-md-7 col-lg-6 ml-lg-auto p-5 text-dark mt-4">
                 <h1 class="display-5 font-wt-900 site-blue lh-5">Vakyansh: A crowdsourcing initiative for Indic
                     languages</h1>
-                <p class="h5 font-weight-light-lg font-weight-normal-sm lh-7 site-blue text-justify mt-5">For the
-                    development of a speech recognition product that focuses solely on Indian languages, there is a need
-                    for an enormous repository of diversified Indian voices. Through Vakyansh, we are reaching out to
-                    you to contribute your voices to create a diverse open source repository of Indian voices to this
-                    end.<a class="ml-1" href="/about-us"> Know More</a></p>
+                <p class="h5 font-weight-light-lg font-weight-normal-sm lh-7 site-blue text-justify mt-5">
+                    We have envisioned a Speech recognition product that focusses solely on our languages.
+                    This vision requires enormous amount of diversified dataset of Indian voices and hence,
+                    we are reaching out to you for your contribution.
+                </p>
+<!--                <p class="h5 font-weight-light-lg font-weight-normal-sm lh-7 site-blue text-justify mt-5">For the-->
+<!--                    development of a speech recognition product that focuses solely on Indian languages, there is a need-->
+<!--                    for an enormous repository of diversified Indian voices. Through Vakyansh, we are reaching out to-->
+<!--                    you to contribute your voices to create a diverse open source repository of Indian voices to this-->
+<!--                    end.<a class="ml-1" href="/about-us"> Know More</a></p>-->
                 <div class="row mt-4">
                     <div class="col-8 col-lg-6"><a role="button" href="#speaker-details"
                             class="btn btn-outline-primary h6 w-100 rounded mt-4 p-3">START RECORDING</a></div>
