--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 html {
   scroll-behavior: smooth;
@@ -22,7 +22,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-weight: 700;
 }
 @media (min-width: 321px) {
@@ -47,16 +47,15 @@ h6,
   }
 }
 @media (min-width: 672px) {
-
 }
 @media (max-width: 768px) {
-  .font-weight-normal-sm{
-    font-weight: 400!important;
+  .font-weight-normal-sm {
+    font-weight: 400 !important;
   }
 }
 @media (min-width: 768px) {
-  .font-weight-light-lg{
-    font-weight: 300!important;
+  .font-weight-light-lg {
+    font-weight: 300 !important;
   }
 }
 @media (min-width: 992px) {
@@ -91,8 +90,8 @@ h6,
 .pt-6 {
   padding-top: 6rem;
 }
-.p-4-5{
-padding: 2rem;
+.p-4-5 {
+  padding: 2rem;
 }
 .mb-6 {
   margin-bottom: 6rem;
@@ -131,44 +130,44 @@ padding: 2rem;
   pointer-events: none;
 }
 .outline-0 {
-outline: 0;
+  outline: 0;
 }
 .form-control.is-invalid {
   background-image: none;
 }
-#chart-row .chart{
+#chart-row .chart {
   height: 40rem;
 }
-.cursor-pointer{
+.cursor-pointer {
   cursor: pointer;
 }
-.oflow-x-hid{
+.oflow-x-hid {
   overflow-x: hidden;
 }
-.w-90{
-  width: 90%!important;
+.w-90 {
+  width: 90% !important;
 }
-[data-toggle="popover"]::after {
+[data-toggle='popover']::after {
   display: inline-block;
-  margin-left: .255em;
+  margin-left: 0.255em;
   vertical-align: middle;
-  content: "";
-  border-top: .3em solid;
-  border-right: .3em solid transparent;
+  content: '';
+  border-top: 0.3em solid;
+  border-right: 0.3em solid transparent;
   border-bottom: 0;
-  border-left: .3em solid transparent;
+  border-left: 0.3em solid transparent;
 }
-.popover-body .table-sm td{
-  padding: 0 .5rem;
+.popover-body .table-sm td {
+  padding: 0 0.5rem;
 }
-.popover-body{
+.popover-body {
   overflow-y: auto;
 }
 .spinner {
   width: 3rem;
   height: 3rem;
   display: inline-block;
-  border-width: .5rem;
+  border-width: 0.5rem;
   border-color: #007bff;
   border-top-color: #fff;
   animation: spin 1s infinite linear;
