|Priyanshu + Sreejith| Modified placeholders and added border on speaker details

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -189,3 +189,6 @@ body.modal-open .supreme-container {
 .modal-lg {
   max-width: 40% !important;
 }
+.modal-backdrop {
+  background-color: white;
+}
