|Sreejith + Priyanshu| modify top language row in vakyansh home page

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -62,7 +62,8 @@ h6,
   html {
     font-size: 15px;
   }
-  .modal-lg, .modal-xl {
+  .modal-lg,
+  .modal-xl {
     max-width: 600px;
   }
 }
@@ -192,3 +193,37 @@ body.modal-open .supreme-container {
 .modal-backdrop {
   background-color: white;
 }
+
+#language-top-row .col-lg-5 {
+  padding-left: 0px;
+}
+
+/* .supreme-container select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background: transparent;
+  background-image: url("data:image/svg+xml;utf8,<svg fill='blue' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+  background-repeat: no-repeat;
+  background-position-x: 98%;
+  background-position-y: 16px;
+  border: 1px solid #dfdfdf;
+  border-radius: 2px;
+  margin-right: 2rem;
+  padding: 1rem;
+  padding-right: 2rem;
+}
+
+.supreme-container select :hover {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background: transparent;
+  background-image: url("data:image/svg+xml;utf8,<svg fill='white' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+  background-repeat: no-repeat;
+  background-position-x: 98%;
+  background-position-y: 16px;
+  border: 1px solid #dfdfdf;
+  border-radius: 2px;
+  margin-right: 2rem;
+  padding: 1rem;
+  padding-right: 2rem;
+} */
