--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -198,21 +198,22 @@ body.modal-open .supreme-container {
   padding-left: 0px;
 }
 
-/* .supreme-container select {
+.supreme-container .btn-outline-primary {
   -webkit-appearance: none;
   -moz-appearance: none;
-  background: transparent;
-  background-image: url("data:image/svg+xml;utf8,<svg fill='RoyalBlue' height='30' viewBox='0 0 24 24' width='30' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
+  appearance: none;
+  color: #007bff;
+  background-image: url("data:image/svg+xml;utf8,<svg fill='RoyalBlue' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'><path d='M16.003 18.626l7.081-7.081L25 13.46l-8.997 8.998-9.003-9 1.917-1.916z'/></svg>");
   background-repeat: no-repeat;
-  background-position-x: 98%;
-  background-position-y: 16px;
-  border: 1px solid #dfdfdf;
-  border-radius: 2px;
-  margin-right: 2rem;
-  padding: 1rem;
-  padding-right: 2rem;
+  background-position-x: calc(100% - 15px);
+  background-position-y: 50%;
+  background-color: transparent;
+  border-color: #007bff;
+  background-size: 1rem;
 }
 
-.supreme-container select :hover {
-  background-color: red;
-} */
+.supreme-container .btn-outline-primary:hover {
+  color: #fff;
+  background-color: #007bff;
+  background-image: url("data:image/svg+xml;utf8,<svg fill='white' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'><path d='M16.003 18.626l7.081-7.081L25 13.46l-8.997 8.998-9.003-9 1.917-1.916z'/></svg>");
+}
