|Priyanshu + Sreejith| mofified HomePage.ejs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/home.css">
 </head>
-<body> <%- include common/headerWithAdminLogIn.ejs %>
+<body> <%- include common/header.ejs %>
 <div class="container-fluid supreme-container">
     <div class="row pt-lg-5">
         <div class="col-12 col-md-7 col-lg-6 ml-lg-auto p-5 text-dark mt-4"><h1
@@ -39,9 +39,6 @@
                     </button>
                 </div>
             </div>
-            <div class="row mt-4 pt-4 ml-0 mr-0 justify-content-center"><a data-toggle="modal"
-                                                                           href="#modal-signIn-pop-up-wrapper">Are you a
-                    Validator? Login here</a></div>
         </div>
         <div class="col-12 col-md-5 col-lg-5 text-right px-0 align-self-center oflow-x-hid"><img src="/img/home.svg"
                                                                                                  class="img-fluid mr-n1">
