|Priyanshu + Sreejith| added font-weight-bold on validator link HomePage.ejs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -39,7 +39,7 @@
                     </button>
                 </div>
             </div>
-            <div class="row mt-4 pt-4 ml-0 mr-0 justify-content-center"><a data-toggle="modal"
+            <div class="row mt-4 pt-4 ml-0 mr-0 justify-content-center"><a data-toggle="modal" class="font-weight-bold"
                                                                            href="#modal-signIn-pop-up-wrapper">Are you a
                     Validator? Login here</a></div>
         </div>
