|Priyanshu | add css for dropdown position in validator-prompt.css

--- a/assets/css/validator-prompt.css
+++ b/assets/css/validator-prompt.css
@@ -6,3 +6,12 @@
 a{
     cursor: pointer;
 }
+
+@media (min-width: 1000px) {
+    .dropdown-menu{
+        right:0;
+        left:auto;
+    }
+}
+
+
