|Priyanshu | added speech recognition model and about us on header

--- a/public/css/validator-prompt.css
+++ b/public/css/validator-prompt.css
@@ -1,1 +1,1 @@
-.audioplayer{border-radius:50%;border:6px solid #3333}a{cursor:pointer}@media (min-width:1000px){.dropdown-menu{right:0;left:auto}}
+.audioplayer{border-radius:50%;border:6px solid #3333}a{cursor:pointer}.dropdown{cursor:pointer}@media (min-width:1000px){.dropdown-menu{right:0;left:auto}}
