--- a/assets/css/validator-prompt.css
+++ b/assets/css/validator-prompt.css
@@ -7,6 +7,10 @@ a{
     cursor: pointer;
 }
 
+.dropdown{
+    cursor: pointer;
+}
+
 @media (min-width: 1000px) {
     .dropdown-menu{
         right:0;
