Add functional test case for locale change

--- a/views/common/headerForContributor.ejs
+++ b/views/common/headerForContributor.ejs
@@ -8,29 +8,29 @@
                 <div href="https://inference.vakyansh.in/"
                     class="nav-link text-dark font-weight-bold dropdown-toggle cursor-pointer" id="localeDropdownMenuButton"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><%= __('Language') %></div>
-                <div class="dropdown-menu" aria-labelledby="localeDropdownMenuButton"><a id="english" class="dropdown-item"
+                <div class="dropdown-menu" aria-labelledby="localeDropdownMenuButton"><a id="assamese" class="dropdown-item"
                         href="/changeLocale/as">Assamese</a> 
-                        <a id="hindi" class="dropdown-item"
+                        <a id="bengali" class="dropdown-item"
                         href="/changeLocale/bn">Bengali</a>
-                        <a id="hindi" class="dropdown-item"
+                        <a id="english" class="dropdown-item"
                         href="/changeLocale/en">English</a>
-                        <a id="hindi" class="dropdown-item"
+                        <a id="gujrati" class="dropdown-item"
                         href="/changeLocale/gu">Gujrati</a>
                         <a id="hindi" class="dropdown-item"
                         href="/changeLocale/hi">Hindi</a>
-                        <a id="hindi" class="dropdown-item"
+                        <a id="kannada" class="dropdown-item"
                         href="/changeLocale/kn">Kannada</a>
-                        <a id="hindi" class="dropdown-item"
+                        <a id="malayalam" class="dropdown-item"
                         href="/changeLocale/ml">Malayalam</a>
-                        <a id="hindi" class="dropdown-item"
+                        <a id="marathi" class="dropdown-item"
                         href="/changeLocale/mr">Marathi</a>
-                        <a id="hindi" class="dropdown-item"
+                        <a id="odia" class="dropdown-item"
                         href="/changeLocale/or">Odia</a>
-                        <a id="hindi" class="dropdown-item"
+                        <a id="punjabi" class="dropdown-item"
                         href="/changeLocale/pa">Punjabi</a> 
-                        <a id="hindi" class="dropdown-item"
+                        <a id="tamil" class="dropdown-item"
                         href="/changeLocale/ta">Tamil</a> 
-                        <a id="hindi" class="dropdown-item"
+                        <a id="telugu" class="dropdown-item"
                         href="/changeLocale/te">Telugu</a> 
                 </div>
             </li>
