--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -241,10 +241,16 @@ body.modal-open .supreme-container {
 }
 
 .card{
-  background: #FFFFFF;
-  background-image: url("https://static.vecteezy.com/system/resources/previews/000/204/357/non_2x/vector-abstract-wave-design.jpg");
+  /*background: #FFFFFF;*/
+  background-image: url("https://static.vecteezy.com/system/resources/previews/000/204/357/large_2x/vector-abstract-wave-design.jpg");
   mix-blend-mode: normal;
   box-shadow: 0px 0px 32px rgba(0, 0, 0, 0.1);
   border-radius: 20px;
   min-height: 100px;
+}
+
+@media (min-width: 992px) {
+  .card{
+    height: 450px;
+  }
 }
