--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,4 +2,4 @@
     if (!sessionId) {
         document.getElementById("toggle-content-language").click();
         sessionStorage.setItem("user", true);
-    }</script><script src="js/home.js"></script><script src="https://www.amcharts.com/lib/version/4.9.23/core.js"></script><script src="https://www.amcharts.com/lib/version/4.9.23/charts.js"></script><script src="js/draw-chart.js"></script></body></html>
+    }</script><script src="js/home.js" id="home-page" default-lang="<%= defaultLang%>"></script><script src="https://www.amcharts.com/lib/version/4.9.23/core.js"></script><script src="https://www.amcharts.com/lib/version/4.9.23/charts.js"></script><script src="js/draw-chart.js"></script></body></html>
