|Sreejith + Umair| Add loader to validator page while audio is loading

--- a/assets/css/validator-prompt.css
+++ b/assets/css/validator-prompt.css
@@ -11,6 +11,11 @@ a{
     cursor: pointer;
 }
 
+.w-h-5 {
+    width: 5rem;
+    height: 5rem;
+}
+
 @media (min-width: 1000px) {
     .dropdown-menu{
         right:0;
