|Ramu| Change India map colors and moved code to separate file

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -279,19 +279,19 @@ body.modal-open .supreme-container {
 }
 
 .quarter {
-  background-color: #C6C6C6;
+  background-color: #CDD8F6;
 }
 
 .half {
-  background-color: #FBEA5A;
+  background-color: #92A8E8;
 }
 
 .threeQuarter {
-  background-color: #EA923F;
+  background-color: #6B85CE;
 }
 
 .full {
-  background-color: #86D126;
+  background-color: #4061BF;
 }
 
 .legend-val {
