--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -232,6 +232,17 @@ html {
     text-decoration: none;
 }
 
+.all-languages {
+    margin-bottom: 1rem;
+}
+
+.data-updated > div {
+    margin-top: .5rem;
+    padding-top: 1rem;
+    color: #959595;
+    font-size: 0.75rem;
+}
+
 @media screen and (min-width: 280px) {
     .no-data-found {
         left: 11%;
@@ -320,6 +331,14 @@ html {
     }
     .no-data-found > div {
         padding: .5rem .5rem;
+    }
+    .all-languages {
+        margin-bottom: 0;
+    }
+    .data-updated > div {
+        margin-top: 0;
+        margin-bottom: 2rem;
+        padding-top: 0;
     }
 }
 
